Support multiple mozilla apps

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,13 @@
 ---
 galaxy_info:
   author: Lenhard Reuter
-  description: Installs thunderbird via apt packages
+  description: Installs mozilla apps via apt packages
   company: Austrian Institute of Technology (AIT)
 
   license: GPL-3.0
   min_ansible_version: '2.1'
 
   galaxy_tags:
-    - thunderbird
+    - mozilla
     - deb
     - ubuntu 24.04
